force-app/main/default/objects/Schedule_of_Value_Lines__c/Schedule_of_Value_Lines__c.object-meta.xml
<CustomObject>
    <label>BT Schedule of Value Lines</label>
    <nameField>
        <displayFormat>SOVL - {000000}</displayFormat>
        <label>SOV #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Schedule of Values Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>