force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Budget_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping</label>
    <referenceTo>Budget_Line_Group__c</referenceTo>
    <relationshipName>Schedule_of_Values_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>