force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Schedule_of_Values_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>