force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Vendor_SOV_Line__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SOV_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor SOV Line</label>
    <referenceTo>Schedule_of_Value_Lines__c</referenceTo>
    <relationshipName>Schedule_of_Values_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>